[gd_scene load_steps=14 format=4 uid="uid://ctmk0vrbcanq"]

[ext_resource type="Script" path="res://level.gd" id="1_8ono1"]
[ext_resource type="PackedScene" uid="uid://b7ssdq5bfmdwi" path="res://mob.tscn" id="2_mc1hw"]
[ext_resource type="Texture2D" uid="uid://ctuhkind8jjeh" path="res://art/testterrainsheet512x512-64.png" id="3_778nf"]
[ext_resource type="PackedScene" uid="uid://ba66f42bf6lq4" path="res://player.tscn" id="4_v2tij"]
[ext_resource type="PackedScene" uid="uid://corsjrjlxb8tj" path="res://UI/hud.tscn" id="5_3utks"]
[ext_resource type="PackedScene" uid="uid://5wiw2ulpbp5n" path="res://spawner.tscn" id="6_k1bem"]
[ext_resource type="PackedScene" uid="uid://cn8u0dgt7dqqb" path="res://UI/shop.tscn" id="7_f1cm4"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_4bf5p"]
texture = ExtResource("3_778nf")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0

[sub_resource type="TileSet" id="TileSet_37yho"]
tile_size = Vector2i(64, 64)
sources/2 = SubResource("TileSetAtlasSource_4bf5p")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wgk3t"]
size = Vector2(1282, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2de10"]
size = Vector2(20, 786)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vusgm"]
size = Vector2(1282, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q3tox"]
size = Vector2(20, 785)

[node name="level" type="Node" groups=["main"]]
script = ExtResource("1_8ono1")
mob = ExtResource("2_mc1hw")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAAAgAAAAAAAAABAAAAAgAFAAAAAAACAAAAAgABAAAAAAADAAAAAgAEAAAAAAAEAAAAAgACAAAAAAAFAAAAAgADAAAAAAAGAAAAAgAGAAAAAAAHAAAAAgAGAAAAAAAIAAAAAgABAAAAAAAJAAAAAgAGAAAAAAAKAAAAAgADAAAAAAALAAAAAgACAAAAAAAMAAAAAgAFAAAAAAANAAAAAgAGAAAAAAAOAAAAAgABAAAAAAAPAAAAAgADAAAAAAAQAAAAAgABAAAAAAARAAAAAgAFAAAAAAASAAAAAgAFAAAAAAATAAAAAgAHAAAAAAATAAEAAgAHAAUAAAATAAIAAgAHAAIAAAATAAMAAgAHAAMAAAATAAQAAgAHAAUAAAATAAUAAgAHAAEAAAATAAYAAgAHAAIAAAATAAcAAgAHAAYAAAATAAgAAgAHAAIAAAATAAkAAgAHAAMAAAATAAoAAgAHAAIAAAATAAsAAgAHAAcAAAASAAsAAgAEAAcAAAARAAsAAgAEAAcAAAAQAAsAAgAFAAcAAAAPAAsAAgACAAcAAAAOAAsAAgAFAAcAAAANAAsAAgAFAAcAAAAMAAsAAgABAAcAAAALAAsAAgAGAAcAAAAKAAsAAgADAAcAAAAJAAsAAgAFAAcAAAAIAAsAAgACAAcAAAAHAAsAAgAFAAcAAAAGAAsAAgACAAcAAAAFAAsAAgAEAAcAAAAEAAsAAgAEAAcAAAADAAsAAgAGAAcAAAACAAsAAgACAAcAAAABAAsAAgAEAAcAAAAAAAsAAgAAAAcAAAAAAAoAAgAAAAUAAAAAAAkAAgAAAAQAAAAAAAgAAgAAAAUAAAAAAAcAAgAAAAYAAAAAAAYAAgAAAAYAAAAAAAUAAgAAAAQAAAAAAAQAAgAAAAQAAAAAAAMAAgAAAAIAAAAAAAIAAgAAAAEAAAAAAAEAAgAAAAIAAAABAAEAAgAGAAUAAAACAAEAAgACAAIAAAADAAEAAgAFAAEAAAAEAAEAAgACAAUAAAAFAAEAAgAEAAIAAAAGAAEAAgAGAAQAAAAHAAEAAgAEAAMAAAAIAAEAAgAGAAIAAAAJAAEAAgAEAAEAAAAKAAEAAgABAAMAAAALAAEAAgAEAAEAAAAMAAEAAgAFAAYAAAANAAEAAgADAAUAAAAOAAEAAgACAAYAAAAPAAEAAgAFAAEAAAAQAAEAAgACAAEAAAARAAEAAgAFAAYAAAASAAEAAgABAAIAAAASAAIAAgAEAAMAAAARAAIAAgADAAMAAAAQAAIAAgADAAUAAAAPAAIAAgAFAAIAAAAOAAIAAgAGAAIAAAANAAIAAgABAAQAAAAMAAIAAgAFAAIAAAALAAIAAgACAAUAAAAKAAIAAgAFAAQAAAAJAAIAAgABAAQAAAAIAAIAAgABAAUAAAAHAAIAAgABAAQAAAAGAAIAAgAFAAUAAAAFAAIAAgAEAAUAAAAEAAIAAgAEAAIAAAADAAIAAgAFAAUAAAACAAIAAgADAAEAAAABAAIAAgAGAAUAAAABAAMAAgACAAMAAAACAAMAAgAEAAYAAAADAAMAAgACAAEAAAAEAAMAAgABAAQAAAAFAAMAAgACAAMAAAAGAAMAAgADAAUAAAAHAAMAAgAFAAQAAAAIAAMAAgADAAUAAAAJAAMAAgABAAQAAAAKAAMAAgAEAAIAAAALAAMAAgAEAAIAAAAMAAMAAgAEAAQAAAANAAMAAgAEAAUAAAAOAAMAAgACAAQAAAAPAAMAAgAGAAYAAAAQAAMAAgACAAQAAAARAAMAAgADAAMAAAASAAMAAgAEAAQAAAASAAQAAgABAAUAAAARAAQAAgABAAMAAAAQAAQAAgACAAIAAAAPAAQAAgADAAEAAAAOAAQAAgADAAYAAAANAAQAAgABAAIAAAAMAAQAAgABAAMAAAALAAQAAgAGAAQAAAAKAAQAAgAFAAYAAAAJAAQAAgACAAUAAAAIAAQAAgAEAAYAAAAHAAQAAgACAAQAAAAGAAQAAgAGAAUAAAAFAAQAAgADAAIAAAAEAAQAAgABAAYAAAADAAQAAgADAAMAAAACAAQAAgAEAAYAAAABAAQAAgACAAUAAAABAAUAAgADAAEAAAACAAUAAgABAAQAAAADAAUAAgAFAAEAAAAEAAUAAgADAAUAAAAFAAUAAgAEAAIAAAAGAAUAAgABAAQAAAAHAAUAAgABAAIAAAAIAAUAAgADAAYAAAAJAAUAAgADAAIAAAAKAAUAAgABAAYAAAALAAUAAgAEAAUAAAAMAAUAAgAGAAQAAAANAAUAAgACAAMAAAAOAAUAAgABAAYAAAAPAAUAAgAFAAMAAAAQAAUAAgAFAAEAAAARAAUAAgAEAAUAAAASAAUAAgABAAUAAAASAAYAAgACAAMAAAARAAYAAgADAAYAAAAQAAYAAgAEAAQAAAAPAAYAAgACAAEAAAAOAAYAAgABAAYAAAANAAYAAgACAAUAAAAMAAYAAgACAAMAAAALAAYAAgAFAAUAAAAKAAYAAgAFAAQAAAAJAAYAAgAEAAMAAAAIAAYAAgAFAAMAAAAHAAYAAgADAAIAAAAGAAYAAgAGAAUAAAAFAAYAAgACAAMAAAAEAAYAAgACAAMAAAADAAYAAgAEAAIAAAACAAYAAgAFAAMAAAABAAYAAgAEAAQAAAABAAcAAgAGAAMAAAACAAcAAgAFAAQAAAADAAcAAgACAAIAAAAEAAcAAgADAAIAAAAFAAcAAgAEAAYAAAAGAAcAAgABAAQAAAAHAAcAAgAEAAYAAAAIAAcAAgAFAAMAAAAJAAcAAgAFAAUAAAAKAAcAAgAGAAMAAAALAAcAAgABAAUAAAAMAAcAAgAGAAEAAAANAAcAAgADAAEAAAAOAAcAAgAEAAUAAAAPAAcAAgAFAAEAAAAQAAcAAgACAAMAAAARAAcAAgAGAAMAAAASAAcAAgADAAEAAAASAAgAAgADAAMAAAARAAgAAgACAAUAAAAQAAgAAgACAAMAAAAPAAgAAgACAAQAAAAOAAgAAgACAAMAAAAEAAgAAgAEAAYAAAADAAgAAgACAAUAAAACAAgAAgAFAAMAAAABAAgAAgADAAQAAAAFAAgAAgAGAAIAAAAGAAgAAgAGAAUAAAAHAAgAAgAFAAEAAAAIAAgAAgAFAAIAAAAJAAgAAgAEAAEAAAAKAAgAAgAGAAMAAAALAAgAAgAFAAIAAAAMAAgAAgAGAAMAAAANAAgAAgABAAQAAAAPAAkAAgAEAAIAAAAQAAkAAgAGAAMAAAARAAkAAgAEAAMAAAASAAkAAgAFAAIAAAAOAAkAAgADAAMAAAANAAkAAgAGAAQAAAAMAAkAAgADAAIAAAALAAkAAgAGAAIAAAAKAAkAAgAGAAEAAAAJAAkAAgAGAAYAAAAIAAkAAgABAAIAAAAHAAkAAgAFAAMAAAAGAAkAAgACAAUAAAAFAAkAAgAFAAIAAAAEAAkAAgAEAAMAAAADAAkAAgADAAUAAAACAAkAAgAFAAMAAAABAAkAAgAFAAYAAAABAAoAAgADAAYAAAACAAoAAgAGAAYAAAADAAoAAgACAAYAAAAEAAoAAgADAAUAAAAFAAoAAgADAAUAAAAGAAoAAgABAAQAAAAHAAoAAgADAAMAAAAIAAoAAgACAAUAAAAJAAoAAgADAAIAAAAKAAoAAgABAAYAAAALAAoAAgABAAYAAAAMAAoAAgABAAIAAAANAAoAAgAFAAQAAAAOAAoAAgACAAUAAAAPAAoAAgAFAAEAAAAQAAoAAgADAAEAAAARAAoAAgAGAAMAAAASAAoAAgACAAEAAAA=")
tile_set = SubResource("TileSet_37yho")

[node name="Player" parent="." instance=ExtResource("4_v2tij")]
position = Vector2(-80, 32)

[node name="spawn_mob_timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="HUD" parent="." instance=ExtResource("5_3utks")]

[node name="Spawner1" parent="." instance=ExtResource("6_k1bem")]
position = Vector2(640, 384)

[node name="Spawner2" parent="." instance=ExtResource("6_k1bem")]
position = Vector2(128, 128)

[node name="Spawner3" parent="." instance=ExtResource("6_k1bem")]
position = Vector2(1152, 128)

[node name="Spawner4" parent="." instance=ExtResource("6_k1bem")]
position = Vector2(1152, 640)

[node name="Spawner5" parent="." instance=ExtResource("6_k1bem")]
position = Vector2(128, 640)

[node name="Wall1" type="StaticBody2D" parent="."]
collision_layer = 0
collision_mask = 0
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall1"]
position = Vector2(639, -24)
shape = SubResource("RectangleShape2D_wgk3t")

[node name="Wall2" type="StaticBody2D" parent="."]
position = Vector2(1288, -8)
collision_layer = 0
collision_mask = 0
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall2"]
position = Vector2(0, 383)
shape = SubResource("RectangleShape2D_2de10")

[node name="Wall3" type="StaticBody2D" parent="."]
position = Vector2(8, 776)
collision_layer = 0
collision_mask = 0
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall3"]
position = Vector2(631, 0)
shape = SubResource("RectangleShape2D_vusgm")

[node name="Wall4" type="StaticBody2D" parent="."]
position = Vector2(-8, -8)
collision_layer = 0
collision_mask = 0
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall4"]
position = Vector2(0, 383.5)
shape = SubResource("RectangleShape2D_q3tox")

[node name="Shop" parent="." instance=ExtResource("7_f1cm4")]

[node name="WaveTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="spawn_mob_timer" to="." method="_on_spawn_mob_timer_timeout"]
[connection signal="timeout" from="WaveTimer" to="." method="_on_wave_timer_timeout"]
